; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/aac/extr_aac.c_aac_rx_set_mailbox.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/aac/extr_aac.c_aac_rx_set_mailbox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aac_softc = type { i32 }

@HBA_FLAGS_DBG_FUNCTION_ENTRY_B = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@AAC_RX_MAILBOX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.aac_softc*, i32, i32, i32, i32, i32)* @aac_rx_set_mailbox to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aac_rx_set_mailbox(%struct.aac_softc* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.aac_softc*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.aac_softc* %0, %struct.aac_softc** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load %struct.aac_softc*, %struct.aac_softc** %7, align 8
  %14 = load i8*, i8** @HBA_FLAGS_DBG_FUNCTION_ENTRY_B, align 8
  %15 = call i32 @fwprintf(%struct.aac_softc* %13, i8* %14, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.aac_softc*, %struct.aac_softc** %7, align 8
  %17 = load i64, i64* @AAC_RX_MAILBOX, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @AAC_MEM1_SETREG4(%struct.aac_softc* %16, i64 %17, i32 %18)
  %20 = load %struct.aac_softc*, %struct.aac_softc** %7, align 8
  %21 = load i64, i64* @AAC_RX_MAILBOX, align 8
  %22 = add nsw i64 %21, 4
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @AAC_MEM1_SETREG4(%struct.aac_softc* %20, i64 %22, i32 %23)
  %25 = load %struct.aac_softc*, %struct.aac_softc** %7, align 8
  %26 = load i64, i64* @AAC_RX_MAILBOX, align 8
  %27 = add nsw i64 %26, 8
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @AAC_MEM1_SETREG4(%struct.aac_softc* %25, i64 %27, i32 %28)
  %30 = load %struct.aac_softc*, %struct.aac_softc** %7, align 8
  %31 = load i64, i64* @AAC_RX_MAILBOX, align 8
  %32 = add nsw i64 %31, 12
  %33 = load i32, i32* %11, align 4
  %34 = call i32 @AAC_MEM1_SETREG4(%struct.aac_softc* %30, i64 %32, i32 %33)
  %35 = load %struct.aac_softc*, %struct.aac_softc** %7, align 8
  %36 = load i64, i64* @AAC_RX_MAILBOX, align 8
  %37 = add nsw i64 %36, 16
  %38 = load i32, i32* %12, align 4
  %39 = call i32 @AAC_MEM1_SETREG4(%struct.aac_softc* %35, i64 %37, i32 %38)
  ret void
}

declare dso_local i32 @fwprintf(%struct.aac_softc*, i8*, i8*) #1

declare dso_local i32 @AAC_MEM1_SETREG4(%struct.aac_softc*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
